# bash_like_c_command_line_interpreter

./: CMakeLists.txt  Makefile  README.md
src/: builtin.c  builtin.h  helpers.c  helpers.h  main.c  main.h  parser.c  parser.h
